authentication with backend files and voice recor-test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.data.mongodb.uri=mongodb://localhost:27017/chatdb
 spring.data.mongodb.database=chatmessagedb
 
+#cloudinary info
+cloudinary.cloud_name=chatapp
+cloudinary.api_key=874268748613538
+cloudinary.api_secret=6GoMdh_2nh04LKcxx_yb7KdrBYM
