Files uploading code completed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,6 @@ spring.data.mongodb.uri=mongodb://localhost:27017/chatdb
 spring.data.mongodb.database=chatmessagedb
 
 #cloudinary info
-cloudinary.cloud_name=chatapp
+cloudinary.cloud_name=do6m2gugl
 cloudinary.api_key=874268748613538
 cloudinary.api_secret=6GoMdh_2nh04LKcxx_yb7KdrBYM
