--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,19 @@
 spring.application.name=chat
-spring.datasource.url=jdbc:postgresql://localhost:5432/chatApp
-spring.datasource.username=postgres
-spring.datasource.password=aizen
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USER}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
+frontend.url = ${FRONTEND_URL}
+
 #mongo db
-spring.data.mongodb.uri=mongodb://localhost:27017/chatdb
-spring.data.mongodb.database=chatmessagedb
+spring.data.mongodb.uri=${MONGO_DB_URI}
+spring.data.mongodb.database=messages
+spring.data.mongodb.auto-index-creation=true
 
 #cloudinary info
-cloudinary.cloud_name=do6m2gugl
-cloudinary.api_key=874268748613538
-cloudinary.api_secret=6GoMdh_2nh04LKcxx_yb7KdrBYM
+cloudinary.cloud_name=${CLOUDINARY_CLOUD_NAME}
+cloudinary.api_key=${CLOUDINARY_API_KEY}
+cloudinary.api_secret=${CLOUDINARY_API_SECRET}
