--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,12 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 frontend.url = ${FRONTEND_URL}
 
+server.servlet.session.cookie.name=JSESSIONID # Standard name
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.secure=true
+server.servlet.session.cookie.same-site=None
+server.servlet.session.cookie.path=/
+
 #mongo db
 spring.data.mongodb.uri=${MONGO_DB_URI}
 spring.data.mongodb.database=messages
