--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,8 @@ spring.data.mongodb.auto-index-creation=true
 cloudinary.cloud_name=${CLOUDINARY_CLOUD_NAME}
 cloudinary.api_key=${CLOUDINARY_API_KEY}
 cloudinary.api_secret=${CLOUDINARY_API_SECRET}
+
+
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
+management.endpoint.health.probes.enabled=true
