added gemini ai chat bot

--- a/.env
+++ b/.env
@@ -1,11 +1,13 @@
-DATASOURCE_URL = jdbc:postgresql://ep-wispy-union-a8ikwo97-pooler.eastus2.azure.neon.tech/chatApp
+DATASOURCE_URL = jdbc:postgresql://ep-wispy-union-a8ikwo97-pooler.eastus2.azure.neon.tech/chatApp?sslmode=require
 DATASOURCE_USER = chatApp_owner
 DATASOURCE_PASSWORD = npg_NaO57XJoIjfk
 
-FRONTEND_URL = https://chatappken.netlify.app
+FRONTEND_URL = http://localhost:5173
 
 CLOUDINARY_CLOUD_NAME = do6m2gugl
 CLOUDINARY_API_KEY = 874268748613538
 CLOUDINARY_API_SECRET = 6GoMdh_2nh04LKcxx_yb7KdrBYM
 
 MONGO_DB_URI = mongodb+srv://messages:aizen@chat-cluster.mlxlqfg.mongodb.net/?retryWrites=true&w=majority&appName=chat-cluster
+
+GEMINI_API_KEY = AIzaSyBNiJ0Utq8tIuOUJ-zJ_CQEZIFAg0mFCU8
