--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,8 @@ cloudinary.api_secret=${CLOUDINARY_API_SECRET}
 management.endpoints.web.exposure.include=health
 management.endpoint.health.show-details=always
 management.endpoint.health.probes.enabled=true
+
+gemini.api.key=${GEMINI_API_KEY}
+ai.user.id = 0
+
+spring.sql.init.mode=always
